[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-stock-analysis"
version = "0.1.0"
description = "A Preswald application for analyzing Amazon stock data from 2000 to 2025"
requires-python = ">=3.8"
dependencies = [
    "preswald",
    "pandas",
    "numpy",
    "plotly"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
